--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,18 @@ p {
   line-height: 1;
 }
 
+.click {
+  transition: all 400ms ease;
+}
+.click:hover {
+  color: #0f00de;
+  transform: scale(1.4);
+}
+
+.click:active {
+  transform: scale(0.8);
+}
+
 /*LANDING PAGE*/
 
 #landing-page {
@@ -50,6 +62,7 @@ p {
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 1024px;
+  padding: 0 32px;
 }
 
 .header__para {
@@ -58,13 +71,19 @@ p {
   width: 100%;
   max-width: 480px;
 }
-.social__list {
-    margin-top: 16px;
 
+.social__list {
+  margin-top: 16px;
 }
+
 .social__link {
   font-size: 36px;
   font-weight: 700;
+  padding: 12px 0;
+  width: 32px;
+  height: 32px;
+  margin-right: 12px;
+  color: #242424;
 }
 
 /*NAVIGATION*/
@@ -73,6 +92,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 24px;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -95,6 +115,6 @@ nav {
 }
 
 #personal-logo {
-  width: 50px;
-  height: 50px;
+  width: 64px;
+  height: 64px;
 }
