--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,6 @@ li {
   list-style-type: none;
 }
 
-section {
-  background-color: #f5f5f5;
-}
-
 p {
   line-height: 1.5;
   font-size: 16px;
@@ -42,7 +38,7 @@ p {
 }
 .click:hover {
   color: #0f00de;
-  transform: scale(1.4);
+  transform: scale(1.2);
 }
 
 .click:active {
@@ -53,6 +49,7 @@ p {
 
 #landing-page {
   min-height: 100vh;
+  background-color: #f5f5f5;
 }
 
 .header {
@@ -74,6 +71,7 @@ p {
 
 .social__list {
   margin-top: 16px;
+  display: flex;
 }
 
 .social__link {
@@ -84,6 +82,9 @@ p {
   height: 32px;
   margin-right: 12px;
   color: #242424;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*NAVIGATION*/
@@ -105,6 +106,7 @@ nav {
 
 .nav__link {
   margin: 0 12px;
+  font-size: 20px;
 }
 
 .nav__link--anchor {
