--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@ p {
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 1024px;
-  padding: 0 32px;
+  padding: 0 32x;
+  margin: 24px 0;
 }
 
 .header__para {
@@ -67,11 +68,13 @@ p {
   line-height: 2;
   width: 100%;
   max-width: 480px;
+  margin: 32px 0;
 }
 
 .social__list {
-  margin-top: 16px;
+  margin-top: 32px;
   display: flex;
+  justify-content: space-evenly;
 }
 
 .social__link {
@@ -97,16 +100,18 @@ nav {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  height: 100px;
+  height: 124px;
 }
 
 .nav__link--list {
   display: flex;
+  justify-content: space-evenly;
 }
 
 .nav__link {
   margin: 0 12px;
   font-size: 20px;
+  padding-right: 12px;
 }
 
 .nav__link--anchor {
@@ -114,6 +119,14 @@ nav {
   font-size: 16px;
   color: #242424;
   font-weight: 700;
+  margin: 12px;
+  padding: 4px;
+  border-bottom: 2px solid transparent;
+}
+
+.nav__link--anchor:hover {
+  width: fit-content;
+  border-bottom: 2px solid #0f00de;
 }
 
 #personal-logo {
