--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,9 @@ p {
 .social__link {
   font-size: 36px;
   font-weight: 700;
-  padding: 12px 0;
+  padding: 16px 0;
   width: 32px;
   height: 32px;
-  margin-right: 12px;
   color: #242424;
   display: flex;
   justify-content: center;
@@ -204,6 +203,12 @@ nav {
 }
 
 #personal-logo {
-  width: 64px;
-  height: 64px;
+  width: 72px;
+  height: 72px;
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 12px;
 }
