--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,17 @@ p {
   line-height: 1;
 }
 
+.container {
+  padding: 48px 0;
+}
+
+.row {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
 .click {
   transition: all 400ms ease;
 }
@@ -211,4 +222,43 @@ nav {
   justify-content: center;
   align-items: center;
   margin-left: 12px;
+}
+
+/* PROJECTS */
+
+.section__title {
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px;
+}
+
+.project__img {
+  width: 100%;
+}
+
+.project__wrapper {
+  position: relative;
+  border-radius: 24px;
+  box-shadow: 0 20px 80px 0 rgb (0, 0, 0, 0);
+  opacity: 0.48;
+  overflow: hidden;
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 88px;
+  transform: translateY(-50%);
+  color: white;
+  max-width: 480px;
+}
+
+.project__description--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1d25;
+  opacity: 0.8;
 }
