--- a/styles.css
+++ b/styles.css
@@ -234,14 +234,25 @@ nav {
 
 .project__img {
   width: 100%;
+  transition: all 400ms ease;
 }
 
 .project__wrapper {
   position: relative;
   border-radius: 24px;
-  box-shadow: 0 20px 80px 0 rgb (0, 0, 0, 0);
-  opacity: 0.48;
+  box-shadow: 0 10px 40px 0;
+  transition: all 400ms ease;
   overflow: hidden;
+}
+
+.project__wrapper:hover .project__img {
+  transform: scale(0.8);
+  opacity: 0.5;
+}
+
+.project__wrapper:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
 }
 
 .project__description {
@@ -251,14 +262,41 @@ nav {
   transform: translateY(-50%);
   color: white;
   max-width: 480px;
+  transition: all 400ms ease;
+  opacity: 0;
 }
 
-.project__description--bg {
-  position: absolute;
+.project__wrapper:hover .project__wrapper--bg {
+  opacity: 0.8;
   top: 0;
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: -100%;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #1c1d25;
   opacity: 0.8;
+  transition: all 400ms ease;
+}
+
+.project__description--title {
+  font-size: 40px;
+  color: white;
+}
+
+.project__description--sub-title {
+  margin-top: 8px;
+}
+
+.project__description--link {
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px 0;
 }
