--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,64 @@ nav {
   margin-left: 12px;
 }
 
+/*LANGUAGES*/
+
+.tech__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 48px;
+}
+
+.tech__list--point {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+.tech__list--point i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 72px;
+  width: 64px;
+  height: 64px;
+  transition: all 400ms ease;
+}
+
+.tech__list--point i:hover {
+  transform: scale(1.4);
+}
+
+.tech__list--point:nth-child(1) i:hover {
+  color: red;
+}
+
+.tech__list--point:nth-child(2) i:hover {
+  color: blue;
+}
+
+.tech__list--point:nth-child(3) i:hover {
+  color: yellow;
+  background-color: black;
+}
+
+.tech__list--point i:hover + .tech__list--text {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.tech__list--text {
+  padding-top: 16px;
+  opacity: 0;
+  transition: all 400ms ease;
+  pointer-events: none;
+}
+
 /* PROJECTS */
 
 .section__title {
@@ -299,4 +357,110 @@ nav {
 
 .project__description--para {
   margin: 16px 0;
+}
+
+footer {
+  width: 100%;
+  background-color: #242424;
+  box-shadow: 8px 0 0 0 #1c1d25;
+  margin-top: 48px;
+}
+
+.footer__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-right: 8px;
+}
+
+.footer__social--list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.footer__social--link {
+  color: white;
+  transition: all 400ms ease;
+  display: inline-block;
+  font-weight: 500;
+  z-index: 50;
+  padding: 20px;
+}
+
+.footer__copyright {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+}
+
+/*FOOTER LINK EFFECTS*/
+
+.footer__social--link:hover {
+  transform: scale(1.2);
+}
+
+.link--box {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 12px;
+  padding: 0px;
+  overflow: hidden;
+  transition: all 400ms ease;
+}
+
+.link--box::before,
+.link--box::after {
+  content: "";
+  position: absolute;
+  opacity: 0;
+}
+
+.link--box::before {
+  transition: all 1200ms ease;
+  opacity: 0;
+}
+
+.link--box::after {
+  transition: all 4ms ease;
+}
+
+.link--box:hover::before {
+  width: 48px;
+  height: 128px;
+  background: linear-gradient(
+    white 0%,
+    #0f00de 40%,
+    #f5f5f5 60%,
+    #242424 80%,
+    white 100%
+  );
+  animation: rotate 4s linear infinite;
+  opacity: 1;
+}
+
+.link--box:hover::after {
+  background-color: #242424;
+  inset: 4px;
+  border-radius: 12px;
+  opacity: 1;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
