--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,72 @@ nav {
   color: #0f00de;
 }
 
+/*MODAL*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 1024px;
+  height: 648px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+}
+
+.modal__half {
+  width: 50%;
+}
+
+.modal__about {
+  background-color: rgb(245, 245, 245);
+  display: flex;
+  flex-direction: column;
+  padding: 40px 72px;
+}
+
+.modal__contact {
+  background-color: #242424;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 72px;
+}
+
+.modal__title {
+  font-size: 26px;
+}
+
+.modal__sub-title {
+  margin: 12px 0 24px 0;
+}
+
+.modal__para {
+  margin-bottom: 12px;
+  line-height: 1.75;
+}
+
+.modal__languages--wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.modal__languages {
+  display: flex;
+  height: 60px;
+  width: 60x;
+  padding: 4px;
+  margin-top: 60px;
+}
+
+.modal__languages:nth-child(1) {
+  margin-right: 8px;
+}
+
 /*LANGUAGES*/
 
 .tech__list {
@@ -274,8 +340,8 @@ nav {
   justify-content: center;
   text-align: center;
   font-size: 72px;
-  width: 64px;
-  height: 64px;
+  width: 60px;
+  height: 60px;
   transition: all 400ms ease;
 }
 
