--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,30 @@ nav {
   padding: 40px 72px;
 }
 
+.title__section--wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 24px;
+  justify-content: space-between;
+}
+
+.title__section--text {
+  display: flex;
+  flex-direction: column;
+  margin-top: 24px;
+}
+.profile--wrapper {
+  display: flex;
+}
+
+.profile__pic {
+  max-width: 120px;
+  max-height: 120px;
+  border-radius: 50%;
+  border: 2px solid #0f00de;
+}
+
 .modal__contact {
   background-color: #242424;
   color: white;
@@ -286,7 +310,7 @@ nav {
 }
 
 .modal__title {
-  font-size: 26px;
+  font-size: 24px;
 }
 
 .modal__sub-title {
@@ -300,21 +324,39 @@ nav {
 
 .modal__languages--wrapper {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 
 .modal__languages {
   display: flex;
-  height: 60px;
-  width: 60x;
-  padding: 4px;
-  margin-top: 60px;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.modal__languages:nth-child(1) {
-  margin-right: 8px;
+.modal__language--pic {
+  position: relative;
+  max-width: 60px;
+  max-height: 60px;
+  padding: 4px;
+  margin-top: 60px;
+  transition: all 400ms ease;
 }
+
+.language__text {
+  position: absolute;
+  bottom: -24px;
+  opacity: 0;
+  transition: all 400ms ease;
+}
+
+.modal__language--pic:hover {
+  transform: scale (0.8);
+}
+
+/* .modal__languages:nth-child(1) {
+  margin-right: 8px;
+} */
 
 /*LANGUAGES*/
 
