--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,40 @@ section {
   background-color: #f5f5f5;
 }
 
+input,
+textarea {
+  width: 100%;
+  background-color: #242424;
+  color: white;
+  outline: none;
+  border: 2px solid #c0c4cc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 40px;
+  transition: all 400ms ease;
+}
+
+textarea {
+  resize: none;
+  height: 108px;
+  padding: 4px;
+  margin-top: 8px;
+}
+
+input:hover, textarea:hover {
+  border-color: #736c73;
+}
+
+input:focus, textarea:focus {
+  border-color: #f06449;
+}
+
+label {
+  font-size: 16px;
+  font-weight: bold;
+}
+
 a {
   text-decoration: none;
 }
@@ -268,6 +302,8 @@ nav {
 
 .modal__half {
   width: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 .modal__about {
@@ -306,7 +342,39 @@ nav {
   color: white;
   display: flex;
   flex-direction: column;
-  padding: 40px 72px;
+  padding: 64px 72px 40px 72px;
+}
+
+.form__btn {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.form__btn--btn {
+  border-radius: 8Px;
+  font-size: 20px;
+  padding: 12px 24px;
+  background-color: #f06449;
+  color: white;
+  border: 2px solid transparent;
+  transition: all 400ms ease;
+  font-weight: bold;
+}
+
+.form__btn--btn:hover {
+  border: 2px solid white;
+  background: transparent;
+  transform: scale(1.04);
+}
+
+.form__btn--btn:active {
+  transform: scale(0.8);
+  background-color: #f06449;
+  border: 2px solid transparent;
 }
 
 .modal__title {
@@ -326,37 +394,57 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 
 .modal__languages {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
+  width: 33%;
+}
+
+.modal__language--pic-wrap {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
 }
 
 .modal__language--pic {
-  position: relative;
   max-width: 60px;
   max-height: 60px;
   padding: 4px;
   margin-top: 60px;
   transition: all 400ms ease;
+  transform: scale(1);
 }
 
 .language__text {
   position: absolute;
-  bottom: -24px;
+  width: 100%;
+  bottom: -20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 0;
   transition: all 400ms ease;
+  cursor: default;
+  font-size: 12px;
 }
 
 .modal__language--pic:hover {
-  transform: scale (0.8);
+  transform: scale(0.8);
+  filter: blur(1px) grayscale(1);
 }
 
-/* .modal__languages:nth-child(1) {
-  margin-right: 8px;
-} */
+.modal__language--pic:hover + .language__text {
+  opacity: 1;
+}
+
+.form__item {
+  margin-bottom: 20px;
+}
 
 /*LANGUAGES*/
 
