currently working on javasript to give modal functionality.

--- a/styles.css
+++ b/styles.css
@@ -473,6 +473,11 @@ nav {
   font-weight: 700;
   text-align: center;
   padding: 32px;
+  z-index: -1;
+}
+
+.modal__overlay--visible {
+  z-index: 1;
 }
 
 .fa-spinner {
