--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,18 @@
   scroll-behavior: smooth;
 }
 
+body {
+  background-color: #f5f5f5;
+}
+
 .color-text {
-  color: #0f00de;
+  color: #483bf4;
   font-weight: 700;
 }
 
 section {
   background-color: #f5f5f5;
+  transition: all 400ms ease;
 }
 
 input,
@@ -94,7 +99,7 @@ p {
   cursor: pointer;
 }
 .click:hover {
-  color: #0f00de;
+  color: #483bf4;
   transform: scale(1.2);
 }
 
@@ -111,7 +116,7 @@ nav,
 footer {
   opacity: 1;
   visibility: visible;
-  transition: all 800ms ease;
+  transition: all 400ms 600ms ease;
 }
 
 .modal--open nav,
@@ -123,6 +128,66 @@ footer {
 .modal--open footer {
   opacity: 0;
   visibility: hidden;
+  transition: all 400ms;
+}
+
+.dark-theme body {
+  background-color: #242424;
+}
+
+.dark-theme .title,
+.dark-theme .title-title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-circle-half-stroke,
+.dark-theme .header__para,
+.dark-theme .tech__list--point,
+.dark-theme .social__link {
+  color: white;
+  transition: all 400ms ease;
+}
+
+.dark-theme .fa-circle-half-stroke:hover {
+  color: #483bf4;
+}
+
+.dark-theme section {
+  background-color: #242424;
+  transition: all 400ms ease;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+  transition: all 400ms ease;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+  transition: all 400ms ease;
+}
+
+.dark-theme .scroll__icon::after,
+.dark-theme .link__hover--black::after {
+  border-color: white;
+  transition: all 400ms ease;
+}
+
+.dark-theme .mail__btn,
+.dark-theme .link__hover--black {
+  background-color: #f5f5f5;
+}
+
+.dark-theme .mail__btn i {
+  color: #1c1d25;
+}
+
+.dark-theme footer {
+  background-color: #1c1d25;
+}
+
+.dark-theme .footer__logo {
+  filter: invert(0);
 }
 
 /*LANDING PAGE*/
@@ -189,7 +254,7 @@ footer {
 
 .mail__btn:hover {
   background-color: #f7fba6d8;
-  border: 2px solid #0f00de;
+  border: 2px solid #483bf4;
 }
 
 .scroll {
@@ -240,6 +305,7 @@ nav {
   max-width: 1280px;
   margin: 0 auto;
   height: 124px;
+  flex-direction: row;
 }
 
 .nav__link--list {
@@ -281,6 +347,7 @@ nav {
   align-items: center;
   margin-left: 12px;
   padding-right: 8px;
+  filter: invert(1);
 }
 
 /*NAV LINK EFFECTS*/
@@ -297,7 +364,7 @@ nav {
   height: 2px;
   bottom: -4px;
   right: 0;
-  background-color: #0f00de;
+  background-color: #483bf4;
   transition: width 400ms ease;
 }
 
@@ -308,7 +375,7 @@ nav {
 }
 
 .nav__link--anchor:hover {
-  color: #0f00de;
+  color: #483bf4;
 }
 
 /*MODAL*/
@@ -377,7 +444,7 @@ nav {
   max-width: 120px;
   max-height: 120px;
   border-radius: 50%;
-  border: 2px solid #0f00de;
+  border: 2px solid #483bf4;
 }
 
 .modal__contact {
@@ -544,7 +611,7 @@ nav {
 }
 
 .modal__exit:hover {
-  color: #1c1d25;
+  color: #f06449;
 }
 
 /*LANGUAGES*/
@@ -683,11 +750,13 @@ nav {
   margin: 16px 0;
 }
 
+/*FOOTER*/
+
 footer {
   width: 100%;
   background-color: #242424;
   box-shadow: 8px 8px 8px 8px #1c1d25;
-  margin-top: 48px;
+  padding-top: 36px;
 }
 
 .footer__logo {
@@ -695,6 +764,8 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
+  filter: invert(1);
+  margin-bottom: 24px;
 }
 
 .footer__social--list {
@@ -764,7 +835,7 @@ footer {
   background: linear-gradient(
     white 0%,
     #0f00de 40%,
-    #f5f5f5 60%,
+    #483bf4 60%,
     #242424 80%,
     white 100%
   );
@@ -786,4 +857,27 @@ footer {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* SHAPES */
+
+.shape .shape--0,
+.shape .shape--1,
+.shape .shape--2 {
+  height: 35vh;
+  width: 5vw;
+}
+
+.shape .shape--3,
+.shape .shape--4,
+.shape .shape--5 {
+  height: 70vh;
+  width: 50vw;
+}
+
+.shape .shape--6,
+.shape .shape--7,
+.shape .shape--8 {
+  height: 95vh;
+  width: 80vw;
 }
