--- a/styles.css
+++ b/styles.css
@@ -955,10 +955,16 @@ footer {
   .header__para {
     font-size: 16px;
   }
+  nav {
+    padding: 4px;
+  }
   #landing-page,
   #projects,
   #languages {
     padding: 36px;
+  }
+  .header {
+    padding: 72px;
   }
   .modal {
     top: 0;
@@ -969,9 +975,29 @@ footer {
     flex-direction: column-reverse;
     border-radius: 0;
   }
-
+  .modal--open {
+    overflow-y: auto;
+  }
   .modal__half {
     width: 100%;
     height: 50%;
+    padding: 20px;
+    overflow-y: auto;
+    max-height: 80vh;
+  }
+  .modal__language--pic {
+    margin-top: 8px;
+  }
+  .language__text {
+    margin-bottom: 8px;
+  }
+  .mail__btn {
+    position: absolute;
+  }
+}
+
+@media (max-width: 480px) {
+  .mail__btn {
+    position: absolute;
   }
 }
