--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .color-text {
-  color: #483bf4;
+  color: #665cf4;
   font-weight: 700;
 }
 
@@ -101,7 +101,7 @@ p {
   cursor: pointer;
 }
 .click:hover {
-  color: #483bf4;
+  color: #665cf4;
   transform: scale(1.2);
 }
 
@@ -158,7 +158,7 @@ footer {
 }
 
 .dark-theme .fa-circle-half-stroke:hover {
-  color: #483bf4;
+  color: #665cf4;
 }
 
 .dark-theme section {
@@ -269,7 +269,7 @@ footer {
 
 .mail__btn:hover {
   background-color: #f7fba6d8;
-  border: 2px solid #483bf4;
+  border: 2px solid #665cf4;
 }
 
 .scroll {
@@ -379,7 +379,7 @@ nav {
   height: 2px;
   bottom: -4px;
   right: 0;
-  background-color: #483bf4;
+  background-color: #665cf4;
   transition: width 400ms ease;
 }
 
@@ -390,7 +390,7 @@ nav {
 }
 
 .nav__link--anchor:hover {
-  color: #483bf4;
+  color: #665cf4;
 }
 
 /*MODAL*/
@@ -459,7 +459,7 @@ nav {
   max-width: 120px;
   max-height: 120px;
   border-radius: 50%;
-  border: 2px solid #483bf4;
+  border: 2px solid #665cf4;
 }
 
 .modal__contact {
@@ -706,6 +706,7 @@ nav {
   box-shadow: 0 10px 40px 0;
   transition: all 400ms ease;
   overflow: hidden;
+  background-color: #f5f5f5;
 }
 
 .project__wrapper:hover .project__img {
@@ -850,11 +851,13 @@ footer {
   height: 128px;
   background: linear-gradient(
     white 0%,
-    #0f00de 40%,
-    #483bf4 60%,
+    #665cf4 20%,
+    #483bf4 40%,
+    #0f00de 60%,
     #242424 80%,
     white 100%
   );
+  filter: blur(8px) brightness(150%);
   animation: rotate 4s linear infinite;
   opacity: 1;
 }
@@ -947,10 +950,61 @@ footer {
 
 /*MEDIA QUERIES*/
 
+@media (max-width: 1024px) {
+  .title,
+  .title-title {
+    font-size: 72px;
+  }
+  .header__para {
+    font-size: 16px;
+  }
+  nav {
+    padding: 4px;
+  }
+  #landing-page,
+  #languages {
+    padding: 36px;
+  }
+  #projects {
+    padding: 80px;
+  }
+  .header {
+    padding: 72px;
+  }
+  .mail__btn {
+    position: absolute;
+  }
+  .modal {
+    height: 97%;
+    width: 97%;
+  }
+  .modal__languages--wrapper {
+    margin-bottom: 36px;
+    padding-bottom: 36px;
+    margin-top: 4px;
+    padding-top: 4px;
+  }
+  .modal__language--pic-wrap {
+    padding-top: 4px;
+    margin-top: 4px;
+  }
+  .modal__half {
+    padding: 24px;
+  }
+  .modal__about,
+  .modal__contact {
+    padding: 32px;
+  }
+  .form__btn {
+    margin-bottom: 24px;
+    padding-bottom: 8px;
+  }
+}
+
 @media (max-width: 768px) {
   .title,
   .title-title {
-    font-size: 76px;
+    font-size: 68px;
   }
   .header__para {
     font-size: 16px;
@@ -972,11 +1026,9 @@ footer {
     transform: none;
     height: auto;
     width: 100%;
+    margin: 0 auto;
     flex-direction: column-reverse;
     border-radius: 0;
-  }
-  .modal--open {
-    overflow-y: auto;
   }
   .modal__half {
     width: 100%;
@@ -999,5 +1051,24 @@ footer {
 @media (max-width: 480px) {
   .mail__btn {
     position: absolute;
+  }
+  .title,
+  .title-title {
+    font-size: 60px;
+  }
+  .modal {
+    height: auto;
+  }
+  .modal__half {
+    padding: 32px;
+    overflow: hidden;
+  }
+  textarea {
+    height: 36px;
+  }
+  .project__description {
+    padding: 12px;
+    margin: 0 auto;
+    left: 24px;
   }
 }
