--- a/styles.css
+++ b/styles.css
@@ -952,7 +952,9 @@ footer {
 
 @media (max-width: 1024px) {
   .title,
-  .title-title {
+  .title-title,
+  .section__title,
+  .section__sub-title {
     font-size: 72px;
   }
   .header__para {
@@ -966,7 +968,7 @@ footer {
     padding: 36px;
   }
   #projects {
-    padding: 80px;
+    padding: 0 80px 32px 80px;
   }
   .header {
     padding: 72px;
@@ -1003,11 +1005,14 @@ footer {
 
 @media (max-width: 768px) {
   .title,
-  .title-title {
+  .title-title,
+  .section__title,
+  .section__sub-title {
     font-size: 68px;
   }
   .header__para {
     font-size: 16px;
+    margin: 60px 0 60px 0;
   }
   nav {
     padding: 4px;
@@ -1029,13 +1034,34 @@ footer {
     margin: 0 auto;
     flex-direction: column-reverse;
     border-radius: 0;
+    max-height: 101vh;
   }
   .modal__half {
     width: 100%;
-    height: 50%;
-    padding: 20px;
-    overflow-y: auto;
-    max-height: 80vh;
+    height: auto;
+    padding: 48px;
+    max-height: 75vh;
+  }
+  textarea {
+    height: 60px;
+  }
+  .modal__about:nth-child(1),
+  .modal__about:nth-child(2) {
+    flex-direction: column;
+  }
+  .title__section--wrapper {
+    margin-bottom: 4px;
+  }
+  .modal__para {
+    padding: 8px;
+    margin: 0 auto;
+    width: 100%;
+  }
+  .modal__languages--wrapper {
+    margin: 0 auto;
+    padding: 4px;
+    width: 100%;
+    justify-content: space-evenly;
   }
   .modal__language--pic {
     margin-top: 8px;
@@ -1049,26 +1075,123 @@ footer {
 }
 
 @media (max-width: 480px) {
-  .mail__btn {
-    position: absolute;
-  }
   .title,
-  .title-title {
-    font-size: 60px;
+  .title-title,
+  .section__title,
+  .section__sub-title {
+    font-size: 32px;
   }
-  .modal {
-    height: auto;
+  #personal-logo {
+    width: 48px;
+    height: 48px;
   }
-  .modal__half {
-    padding: 32px;
-    overflow: hidden;
+  nav {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 auto;
   }
-  textarea {
-    height: 36px;
+  .header__para {
+    font-size: 12px;
+    margin: 0 auto;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
-  .project__description {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 4px 32px 12px 32px;
+    margin: 0 auto;
+    bottom: 48px;
+  }
+  .social__link {
+    font-size: 24px;
+  }
+  .nav__link:first-child {
+    display: none;
+  }
+  .nav__link--anchor {
+    font-size: 12px;
+  }
+  .mail__btn {
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    bottom: 8px;
+    right: 8px;
+    display: none;
+  }
+  .mail__btn i {
+    font-size: 24px;
+  }
+  .scroll {
+    display: none;
+  }
+  #landing-page,
+  #projects,
+  #languages {
     padding: 12px;
     margin: 0 auto;
-    left: 24px;
+  }
+  #languages {
+    display: none;
+  }
+  .modal {
+    height: fit-content;
+  }
+  .modal__half {
+    height: 50vh;
+  }
+  .modal__contact,
+  .modal__about,
+  .modal__para {
+    font-size: 12px;
+  }
+  .profile--wrapper {
+    display: none;
+  }
+  .modal__para {
+    padding: 4px;
+  }
+  .tech__list--point i {
+    width: 28px;
+    height: 28px;
+    font-size: 32px;
+  }
+  .project__description--para {
+    display: none;
+  }
+  .project__description {
+    left: 0;
+    padding: 4px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .project__description--para,
+  .project__description--title {
+    font-size: 12px;
+    padding: 4px;
+  }
+  .project__description--sub-title {
+    font-size: 4px;
+    padding-bottom: 4px;
+  }
+  .project__description--link {
+    font-size: 16px;
+    margin: 0 auto;
+    padding: 4px;
+  }
+  .footer__social--link,
+  .footer__copyright {
+    font-size: 12px;
+  }
+  .shape {
+    width: 16px;
+    height: 16px;
   }
 }
