--- a/styles.css
+++ b/styles.css
@@ -1108,9 +1108,6 @@ footer {
   .social__link {
     font-size: 24px;
   }
-  .nav__link:first-child {
-    display: none;
-  }
   .nav__link--anchor {
     font-size: 12px;
   }
@@ -1194,4 +1191,7 @@ footer {
     width: 16px;
     height: 16px;
   }
+}
+
+@media (max-width: 400px) {
 }
